# zulu

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/workflows/: benchmark.yml  docker-hub-parachain.yml  rust.yml  tag.yml
docs/: changelog_for_devs.md
integration-tests/: package-lock.json  package.json
integration-tests/tests/: block.ts
misc/: frame_weight_template.hbs  orml_weight_template.hbs  weight_template.hbs
node/: Cargo.toml  build.rs
node/res/: battery_station_relay.json  bs.json  bs_parachain.json  zeitgeist.json  zulu_parachain.json
node/src/: benchmarking.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
node/src/chain_spec/: additional_chain_spec.rs  battery_station.rs  dev.rs  mod.rs  zulu.rs
node/src/cli/: cli_parachain.rs
node/src/service/: service_parachain.rs  service_standalone.rs
primitives/: Cargo.toml
primitives/src/: asset.rs  constants.rs  lib.rs  market.rs  max_runtime_usize.rs  outcome_report.rs  pool.rs  pool_status.rs  proxy_type.rs  serde_wrapper.rs  traits.rs  types.rs
primitives/src/constants/: mock.rs  zul.rs
primitives/src/traits/: dispute_api.rs  market_commons_pallet_api.rs  market_id.rs  swaps.rs  zulu_multi_reservable_currency.rs
runtime/battery-station/: Cargo.toml
runtime/battery-station/src/: lib.rs  parachain_params.rs  parameters.rs
runtime/battery-station/src/integration_tests/xcm/: mod.rs  setup.rs  test_net.rs
runtime/battery-station/src/integration_tests/xcm/tests/: currency_id_convert.rs  mod.rs  transfers.rs
runtime/battery-station/src/xcm_config/: config.rs  mod.rs
runtime/common/: Cargo.toml
runtime/common/src/: lib.rs
runtime/common/src/weights/: cumulus_pallet_xcmp_queue.rs  frame_system.rs  mod.rs  orml_currencies.rs  orml_tokens.rs  pallet_author_inherent.rs  pallet_author_mapping.rs  pallet_author_slot_filter.rs  pallet_balances.rs  pallet_bounties.rs  pallet_collective.rs  pallet_democracy.rs  pallet_grandpa.rs  pallet_identity.rs  pallet_membership.rs  pallet_multisig.rs  pallet_parachain_staking.rs  pallet_preimage.rs  pallet_proxy.rs  pallet_scheduler.rs  pallet_timestamp.rs  pallet_treasury.rs  pallet_utility.rs  pallet_vesting.rs
runtime/zeitgeist/: build.rs
runtime/zeitgeist/src/: lib.rs  parachain_params.rs  parameters.rs
runtime/zeitgeist/src/integration_tests/xcm/: setup.rs
runtime/zeitgeist/src/xcm_config/: config.rs
runtime/zulu/: Cargo.toml
runtime/zulu/src/integration_tests/: mod.rs
runtime/zulu/src/integration_tests/xcm/: test_net.rs
runtime/zulu/src/xcm_config/: asset_registry.rs  fees.rs
scripts/: build-parachain-spec.sh  docker-hub-publish.sh
scripts/benchmarks/: configuration.sh  quick_check.sh  run_benchmarks.sh
scripts/parachain/: bootstrap.sh  local.sh  testing-network-commons.sh
scripts/runtime-upgrade/: test_runtime_upgrade.sh
scripts/tests/: misc.sh  parachain.sh  standalone.sh
zrml/authorized/: Cargo.toml
zrml/authorized/src/: authorized_pallet_api.rs  benchmarks.rs  lib.rs  migrations.rs  mock.rs  mock_storage.rs  tests.rs  weights.rs
zrml/court/: Cargo.toml
zrml/court/src/: benchmarks.rs  court_pallet_api.rs  juror.rs  juror_status.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
zrml/global-disputes/: Cargo.toml  README.md
zrml/global-disputes/src/: benchmarks.rs  global_disputes_pallet_api.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
zrml/liquidity-mining/: Cargo.toml  README.md
zrml/liquidity-mining/src/: benchmarks.rs  lib.rs  liquidity_mining_pallet_api.rs  mock.rs  owned_values_params.rs  tests.rs  track_incentives_based_on_bought_shares.rs  track_incentives_based_on_sold_shares.rs  utils.rs  weights.rs
zrml/market-commons/: Cargo.toml  README.md
zrml/market-commons/src/: lib.rs  migrations.rs  mock.rs  tests.rs
zrml/orderbook-v1/: Cargo.toml
zrml/orderbook-v1/fuzz/: Cargo.toml  orderbook_v1_full_workflow.rs
zrml/orderbook-v1/src/: benchmarks.rs  lib.rs  mock.rs  tests.rs  weights.rs
zrml/prediction-markets/: Cargo.toml  README.md
zrml/prediction-markets/fuzz/: Cargo.toml  pm_full_workflow.rs
zrml/prediction-markets/runtime-api/: Cargo.toml
zrml/prediction-markets/runtime-api/src/: lib.rs
zrml/prediction-markets/src/: benchmarks.rs  lib.rs  migrations.rs  mock.rs  orml_asset_registry.rs  tests.rs  weights.rs
zrml/rikiddo/: Cargo.toml  README.md
zrml/rikiddo/fuzz/: Cargo.toml  balance_to_fixedu_conversion.rs  ema_market_volume_estimate_ema.rs  ema_market_volume_first_state.rs  ema_market_volume_second_state.rs  ema_market_volume_third_state.rs  fee_sigmoid.rs  fixedi_to_fixedu_conversion.rs  fixedu_to_balance_conversion.rs  fixedu_to_fixedi_conversion.rs  rikiddo_pallet.rs  rikiddo_with_calculated_fee.rs  rikiddo_with_initial_fee.rs  shared.rs
zrml/rikiddo/src/: constants.rs  lib.rs  mock.rs  tests.rs  traits.rs  types.rs  utils.rs
zrml/rikiddo/src/tests/: ema_market_volume.rs  pallet.rs  rikiddo_sigmoid_mv.rs  sigmoid_fee.rs
zrml/rikiddo/src/tests/rikiddo_sigmoid_mv/: cost.rs  fee.rs  market_volume.rs  misc.rs  price.rs
zrml/rikiddo/src/types/: ema_market_volume.rs  rikiddo_sigmoid_mv.rs  sigmoid_fee.rs
zrml/simple-disputes/: Cargo.toml
zrml/simple-disputes/src/: lib.rs  mock.rs  simple_disputes_pallet_api.rs  tests.rs
zrml/styx/: Cargo.toml  README.md
zrml/styx/src/: benchmarks.rs  lib.rs  mock.rs  tests.rs  weights.rs
zrml/swaps/: Cargo.toml
zrml/swaps/fuzz/: Cargo.toml  create_pool.rs  pool_exit.rs  pool_exit_with_exact_asset_amount.rs  pool_exit_with_exact_pool_amount.rs  pool_join.rs  pool_join_with_exact_asset_amount.rs  pool_join_with_exact_pool_amount.rs  swap_exact_amount_in.rs  swap_exact_amount_out.rs  utils.rs
zrml/swaps/rpc/: Cargo.toml
zrml/swaps/rpc/src/: lib.rs
zrml/swaps/runtime-api/: Cargo.toml
zrml/swaps/runtime-api/src/: lib.rs
zrml/swaps/src/: arbitrage.rs  benchmarks.rs  check_arithm_rslt.rs  consts.rs  events.rs  fixed.rs  lib.rs  math.rs  migrations.rs  mock.rs  root.rs  tests.rs  utils.rs  weights.rs
(+2 files in other folders)
