[[bin]]
name = "zulu"
path = "./src/main.rs"

[build-dependencies]
substrate-build-script-utils = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }

[dependencies]
pallet-transaction-payment = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
pallet-transaction-payment-rpc = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
pallet-transaction-payment-rpc-runtime-api = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sc-basic-authorship = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sc-cli = { branch = "moonbeam-polkadot-v0.9.29", features = ["wasmtime"], git = "https://github.com/zulustation/substrate" }
sc-client-api = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sc-consensus = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sc-executor = { branch = "moonbeam-polkadot-v0.9.29", features = ["wasmtime"], git = "https://github.com/zulustation/substrate" }
sc-keystore = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sc-rpc = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sc-rpc-api = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sc-service = { branch = "moonbeam-polkadot-v0.9.29", features = ["wasmtime"], git = "https://github.com/zulustation/substrate" }
sc-sysinfo = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sc-telemetry = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sc-transaction-pool = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sc-transaction-pool-api = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sp-api = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sp-block-builder = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sp-blockchain = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sp-consensus = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sp-core = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sp-inherents = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sp-keyring = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sp-offchain = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sp-runtime = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sp-session = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sp-storage = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sp-timestamp = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sp-transaction-pool = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sp-trie = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
substrate-frame-rpc-system = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }

# Try-Runtime

try-runtime-cli = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate", optional = true }

# Benchmark

frame-benchmarking = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate", optional = true }
frame-benchmarking-cli = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }

# Cumulus

cumulus-client-cli = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/cumulus", optional = true }
cumulus-client-collator = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/cumulus", optional = true }
cumulus-client-consensus-common = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/cumulus", optional = true }
cumulus-client-consensus-relay-chain = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/cumulus", optional = true }
cumulus-client-network = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/cumulus", optional = true }
cumulus-client-service = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/cumulus", optional = true }
cumulus-primitives-core = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/cumulus", optional = true }
cumulus-primitives-parachain-inherent = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/cumulus", optional = true }
cumulus-relay-chain-inprocess-interface = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/cumulus", optional = true }
cumulus-relay-chain-interface = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/cumulus", optional = true }
cumulus-relay-chain-rpc-interface = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/cumulus", optional = true }

# Parachain

moonbeam-vrf = { tag = "v0.27.2-a", git = "https://github.com/zulustation/moonbeam", optional = true }
nimbus-consensus = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/zulustation/nimbus", optional = true }
nimbus-primitives = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/zulustation/nimbus", optional = true }
pallet-author-inherent = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/zulustation/nimbus", optional = true }
pallet-parachain-staking = { tag = "v0.27.2-a", git = "https://github.com/zulustation/moonbeam", optional = true }
parity-scale-codec = { optional = true, version = "3.0.0" }
sc-chain-spec = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate", optional = true }
sc-network = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate", optional = true }
sc-network-common = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate", optional = true }
sc-tracing = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate", optional = true }
serde = { features = ["derive"], optional = true, version = "1.0.144" }
session-keys-primitives = { tag = "v0.27.2-a", default-features = false, git = "https://github.com/zulustation/moonbeam", optional = true }
sp-keystore = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate", optional = true }
substrate-prometheus-endpoint = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate", optional = true }

# Polkadot

polkadot-cli = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/polkadot", optional = true }
polkadot-parachain = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/polkadot", optional = true }
polkadot-primitives = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/polkadot", optional = true }
polkadot-service = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/polkadot", optional = true }
polkadot-test-service = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/polkadot", optional = true }

# Standalone

sc-consensus-aura = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sc-finality-grandpa = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sp-consensus-aura = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sp-finality-grandpa = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }

# Utility
cfg-if = { version = "1.0.0" }
clap = { version = "3.2.20", features = ["derive"] }
hex-literal = { version = "0.3.4" }
jsonrpsee = { version = "0.15.1", features = ["server"] }
log = { optional = true, version = "0.4.17" }

# Zulu

battery-station-runtime = { path = "../runtime/battery-station", optional = true }
zulu-primitives = { path = "../primitives" }
zulu-runtime = { path = "../runtime/zulu", optional = true }
zrml-liquidity-mining = { path = "../zrml/liquidity-mining" }
zrml-swaps-rpc = { path = "../zrml/swaps/rpc" }
[features]
default = ["with-battery-station-runtime", "with-zulu-runtime"]
parachain = [
    "battery-station-runtime?/parachain",
    "zulu-runtime?/parachain",

    # Cumulus

    "cumulus-client-cli",
    "cumulus-client-collator",
    "cumulus-client-consensus-common",
    "cumulus-client-consensus-relay-chain",
    "cumulus-client-network",
    "cumulus-client-service",
    "cumulus-primitives-core",
    "cumulus-primitives-parachain-inherent",
    "cumulus-relay-chain-inprocess-interface",
    "cumulus-relay-chain-interface",
    "cumulus-relay-chain-rpc-interface",


    # Parachain

    "log",
    "moonbeam-vrf",
    "nimbus-consensus",
    "nimbus-primitives",
    "pallet-author-inherent",
    "pallet-parachain-staking",
    "parity-scale-codec",
    "session-keys-primitives",
    "sc-chain-spec",
    "sc-network",
    "sc-network-common",
    "sc-tracing",
    "serde",
    "sp-keystore",
    "substrate-prometheus-endpoint",

    # Polkadot

    "polkadot-cli",
    "polkadot-parachain",
    "polkadot-primitives",
    "polkadot-service",
    "polkadot-test-service",
]
runtime-benchmarks = [
    "battery-station-runtime?/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "polkadot-service?/runtime-benchmarks",
    "zulu-runtime?/runtime-benchmarks",
]
try-runtime = [
    "battery-station-runtime?/try-runtime",
    "zulu-runtime?/try-runtime",
    "try-runtime-cli",
]
with-battery-station-runtime = ["battery-station-runtime"]
with-zulu-runtime = ["zulu-runtime"]

[package]
authors = ["Zulu PM <contact@zulu.pm>"]
build = "build.rs"
description = "An evolving blockchain for prediction markets and futarchy."
edition = "2021"
homepage = "https://zulu.pm"
name = "zulu-node"
version = "0.3.8"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
