[dependencies]
arbitrary = { version = "1.0.1", features = ["derive"], optional = true }
cfg-if = { version = "1.0.0", default-features = false }
frame-support = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/zulustation/substrate" }
frame-system = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/zulustation/substrate" }
hashbrown = { default-features = true, version = "0.11" }
pallet-balances = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate", optional = true }
pallet-timestamp = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate", optional = true }
parity-scale-codec = { default-features = false, features = ["derive", "max-encoded-len"], version = "3.0.0" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-core = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/zulustation/substrate" }
sp-io = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate", optional = true }
sp-runtime = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/zulustation/substrate" }
substrate-fixed = { default-features = false, features = ["serde"], git = "https://github.com/encointer/substrate-fixed" }
zulu-primitives = { default-features = false, path = "../../primitives" }

[dev-dependencies]
zrml-rikiddo = { features = ["mock"], path = "." }

[features]
default = ["std"]
mock = [
    "pallet-balances",
    "pallet-timestamp",
    "sp-io",
    "zulu-primitives/mock",
]
std = [
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "sp-core/std",
    "sp-runtime/std",
    "substrate-fixed/std",
    "zulu-primitives/std",
]
try-runtime = [
    "frame-support/try-runtime",
]

[package]
authors = ["Zulu PM <contact@zulu.pm>"]
edition = "2021"
name = "zrml-rikiddo"
version = "0.3.8"
