[dependencies]
frame-benchmarking = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, optional = true, git = "https://github.com/zulustation/substrate" }
frame-support = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/zulustation/substrate" }
frame-system = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/zulustation/substrate" }
parity-scale-codec = { default-features = false, features = ["derive", "max-encoded-len"], version = "3.0.0" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-runtime = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/zulustation/substrate" }
zulu-primitives = { default-features = false, path = "../../primitives" }

[dev-dependencies]
pallet-balances = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
pallet-timestamp = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
sp-io = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate" }
zulu-primitives = { default-features = false, features = ["mock"], path = "../../primitives" }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
std = [
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "sp-runtime/std",
    "zulu-primitives/std",
]
try-runtime = [
    "frame-support/try-runtime",
]

[package]
authors = ["Zulu PM <contact@zulu.pm>"]
edition = "2021"
name = "zrml-styx"
version = "0.3.8"
