[dependencies]
frame-benchmarking = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, optional = true, git = "https://github.com/zulustation/substrate" }
frame-support = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/zulustation/substrate" }
frame-system = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/zulustation/substrate" }
orml-traits = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/zulustation/open-runtime-module-library" }
parity-scale-codec = { default-features = false, features = ["derive", "max-encoded-len"], version = "3.0.0" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-runtime = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/zulustation/substrate" }
substrate-fixed = { default-features = false, git = "https://github.com/encointer/substrate-fixed" }
zulu-primitives = { default-features = false, path = "../../primitives" }
zrml-liquidity-mining = { default-features = false, path = "../liquidity-mining" }
zrml-market-commons = { default-features = false, path = "../market-commons" }
zrml-rikiddo = { default-features = false, path = "../rikiddo" }

# Mock

orml-currencies = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/open-runtime-module-library", optional = true }
orml-tokens = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/open-runtime-module-library", optional = true }
pallet-balances = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate", optional = true }
pallet-timestamp = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate", optional = true }
sp-api = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate", optional = true }
sp-io = { branch = "moonbeam-polkadot-v0.9.29", git = "https://github.com/zulustation/substrate", optional = true }
zrml-swaps-runtime-api = { optional = true, path = "./runtime-api" }

[dev-dependencies]
more-asserts = "0.2"
test-case = "2.0.2"
zrml-swaps = { features = ["mock"], path = "." }

[features]
default = ["std"]
mock = [
    "orml-currencies",
    "orml-tokens",
    "pallet-balances",
    "pallet-timestamp",
    "sp-api",
    "sp-io",
    "zulu-primitives/mock",
    "zrml-swaps-runtime-api",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
std = [
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "orml-traits/std",
    "parity-scale-codec/std",
    "sp-runtime/std",
    "substrate-fixed/std",
    "zulu-primitives/std",
    "zrml-market-commons/std",
    "zrml-liquidity-mining/std",
    "zrml-rikiddo/std",
]
try-runtime = [
    "frame-support/try-runtime",
]

[package]
authors = ["Zulu PM <contact@zulu.pm>"]
edition = "2021"
name = "zrml-swaps"
version = "0.3.8"
