[dependencies]
parity-scale-codec = { default-features = false, features = ["derive", "max-encoded-len"], version = "3.0.0" }
sp-api = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/zulustation/substrate" }
sp-runtime = { branch = "moonbeam-polkadot-v0.9.29", default-features = false, git = "https://github.com/zulustation/substrate" }
zulu-primitives = { default-features = false, path = "../../../primitives" }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "sp-api/std",
    "sp-runtime/std",
    "zulu-primitives/std",
]

[package]
authors = ["Zulu PM <contact@zulu.pm>"]
edition = "2021"
name = "zrml-swaps-runtime-api"
version = "0.3.8"
